--- a/capture/capture.csproj
+++ b/capture/capture.csproj
@@ -122,6 +122,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NaratorWindowFirst.xaml.cs">
+      <DependentUpon>NaratorWindowFirst.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NewWindowPage.xaml.cs">
       <DependentUpon>NewWindowPage.xaml</DependentUpon>
     </Compile>
@@ -150,6 +153,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="NaratorWindowFirst.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="NewWindowPage.xaml">
       <SubType>Designer</SubType>
