--- a/capture/capture.csproj
+++ b/capture/capture.csproj
@@ -125,6 +125,9 @@
     <Compile Include="NaratorWindowFirst.xaml.cs">
       <DependentUpon>NaratorWindowFirst.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NaratorWindowSecond.xaml.cs">
+      <DependentUpon>NaratorWindowSecond.xaml</DependentUpon>
+    </Compile>
     <Compile Include="NewWindowPage.xaml.cs">
       <DependentUpon>NewWindowPage.xaml</DependentUpon>
     </Compile>
@@ -155,6 +158,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="NaratorWindowFirst.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NaratorWindowSecond.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
