--- a/capture/capture.csproj
+++ b/capture/capture.csproj
@@ -132,6 +132,7 @@
       <DependentUpon>NewWindowPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendKey.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
